# EcoSM

./: .gitignore  Pipfile  README.md  example.config.ini  main.py  pyproject.toml  requirements.txt  setup.cfg  start-pipenv.bat  start-venv.bat
scripts/: auto-restart.py  reinstall.bat  restarter.bat  restarter.sh  start-pipenv.bat  start-venv.bat  update-git.bat  update-pipenv.bat  update-venv.bat
src/ecorcon/: __init__.py  __main__.py  _version.py  config.py  manager.py  rcon.py  script.py  server.py  system.py  web.py
src/ecorcon/templates/: config.html  default_layout.html  index.html  login.html  manager.html  rcon.html  register.html  send.html  server.html  system.html
