[metadata]
name = ecorcon
version = attr: ecorcon._version.__version__
description = attr: ecorcon.__description__
summary = attr: ecorcon.__description__
author = Iuri Guilherme
author_email = 2027447+iuriguilherme@users.noreply.github.com
maintainer = Iuri Guilherme
maintainer_email = 2027447+iuriguilherme@users.noreply.github.com
home_page = https://iuri.xyz/ecorcon/
url = https://iuri.xyz/ecorcon/
project_urls =
  Source Code = https://github.com/iuriguilherme/ecorcon/
  Issue Tracker = https://github.com/iuriguilherme/ecorcon/issues/
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
  LICENSE.md
description_file =
  README.md
  LICENSE.md
  CHANGES.txt
classifier =
  Development Status :: 3 - Alpha
  Environment :: Console
  Environment :: Web Environment
  Framework :: Flask
  Framework :: Quart
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Intended Audience :: Other Audience
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.11
packages = 
  ecorcon
package_dir = src
include_package_data = True
zip_safe = False

[options]
packages = 
  ecorcon
package_dir = = src
include_package_data = True
python_requires = >= 3.11

[files]
packages = find:
package_dir = = src
extra_files =
  CHANGES.txt
  LICENSE.md
  README.md
